kustomize/base/7.1.0/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: $(NAMESPACE)/obri-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    nginx.ingress.kubernetes.io/http2-max-field-size: 16k
    nginx.ingress.kubernetes.io/http2-max-header-size: 128k
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
    nginx.ingress.kubernetes.io/error-log-level: "debug"
  name: open-banking
spec:
  rules:
  - host: $(IG_FQDN)
    http:
      paths:
      - backend:
          service:
            name: ig
            port:
              number: 8080
        path: /am
        pathType: Prefix
      - backend:
          service:
            name: ig
            port:
              number: 8080
        path: /rs
        pathType: Prefix
  tls:
    - hosts:
        - $(IG_FQDN)
      secretName: sslcert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: $(NAMESPACE)/obri-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    nginx.ingress.kubernetes.io/http2-max-field-size: 16k
    nginx.ingress.kubernetes.io/http2-max-header-size: 128k
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
    nginx.ingress.kubernetes.io/error-log-level: "debug"
  name: non-open-banking
spec:
  rules:
    - host: $(IG_FQDN)
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 8080
            path: /am/XUI
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 8080
            path: /rcs/api/
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 8080
            path: /rcs/ui/
            pathType: Prefix
          # Temporary - this will be internal
          - backend:
              service:
                name: ig
                port:
                  number: 8080
            path: /jwkms
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 8080
            path: /jwksproxy
            pathType: Prefix
  tls:
    - hosts:
        - $(IG_FQDN)
      secretName: sslcert
